添加字体库

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,121 @@
 <head>
 	<meta charset="UTF-8">
 	<title>AUI</title>
-	<link rel="stylesheet" type="text/css" href="dist/css/aui.min.css">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
+   	<meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="stylesheet" type="text/css" href="iconfont/iconfont.css" />
+	<link rel="stylesheet" type="text/css" href="dist/css/aui.min.css" />
 </head>
 <body>
-	<h1>aui is a mobile ui project</h1>
-	<h2>hello world</h2>
-	<p>aui专注移动前端UI框架</p>
-	<header>aui header</header>
+	<header class="aui-header">
+		<a href="javascript:;" class="aui-toBack aui-float-left">
+			<i class="iconfont icon-back"></i>
+		</a>
+		<a href="javascript:;" class="aui-right-icon  aui-float-right">
+			<i class="iconfont icon-my2line"></i>
+		</a>
+		<h1 class="aui-pageTitle">欢迎使用AUI移动端组件</h1>
+	</header>
+	
+	<br/>
+
+	<header class="aui-header">
+		<a href="javascript:;" class="aui-toBack aui-float-left aui-toBack-text">
+			<i class="iconfont icon-back"></i>返回
+		</a>
+		<a href="javascript:;" class="aui-right-icon  aui-float-right">
+			<i class="iconfont icon-my2line"></i>
+		</a>
+		<h1 class="aui-pageTitle">AUI移动端组件</h1>
+	</header>
+	
+	<br/>
+
+	<header class="aui-header">
+		<a href="javascript:;" class="aui-toBack aui-float-left aui-toBack-text">
+			<i class="iconfont icon-back"></i>返回
+		</a>
+		<a href="javascript:;" class="aui-right-icon  aui-float-right aui-toBack-text">
+			编辑
+		</a>
+		<h1 class="aui-pageTitle">AUI移动端组件</h1>
+	</header>
+
+	<section class="aui-content">
+		<div class="aui-panel">
+			<a href="#" class="aui-button button-primary">主色按钮 primary</a>
+			<a href="#" class="aui-button button-primary button-disabled">主色按钮 primary</a>
+			<a href="#" class="aui-button button-warning">警告 warning</a>
+			<a href="#" class="aui-button button-warning button-disabled">警告 warning</a>
+			<a href="#" class="aui-button button-gray">灰色按钮 gray</a>	
+			<button class="aui-button button-hollow-primary">主色按钮 primary</button>
+			<button class="aui-button button-primary">主色按钮 primary</button>
+		</div>
+	</section>
+
+
+	
+	<footer class="aui-footer aui-footer-column-3">
+		<a href="#">
+			<i class="iconfont icon-homeline"></i>
+			<span>首页</span>
+		</a>
+		<a href="#">
+			<i class="iconfont icon-ensure"></i>
+			<span>口碑</span>
+		</a>
+		<a href="#" class="active">
+			<i class="iconfont icon-shoppingcart2line"></i>
+			<span>购物车</span>
+		</a>
+	</footer>
+	<br/>
+	<footer class="aui-footer aui-footer-column-4">
+		<a href="#">
+			<i class="iconfont icon-homeline"></i>
+			<span>首页</span>
+		</a>
+		<a href="#">
+			<i class="iconfont icon-ensure"></i>
+			<span>口碑</span>
+		</a>
+		<a href="#" class="active">
+			<i class="iconfont icon-information"></i>
+			<span>消息</span>
+		</a>
+		<a href="#">
+			<i class="iconfont icon-shoppingcart2line"></i>
+			<span>购物车</span>
+		</a>
+	</footer>
+	<br/>
+
+
+
+	<footer class="aui-footer aui-footer-column-5">
+		<a href="#" class="active">
+			<i class="iconfont icon-homeline"></i>
+			<span>首页</span>
+		</a>
+		<a href="#">
+			<i class="iconfont icon-information"></i>
+			<span>消息</span>
+			<em>66</em>
+		</a>
+		<a href="#">
+			<i class="iconfont icon-ensure"></i>
+			<span>口碑</span>
+		</a>
+		<a href="#">
+			<i class="iconfont icon-setting"></i>
+			<span>设置</span>
+		</a>
+		<a href="#">
+			<i class="iconfont icon-shoppingcart2line"></i>
+			<span>购物车</span>
+		</a>
+	</footer>
 </body>
 </html>
